--- a/vehicle_detection.ipynb
+++ b/vehicle_detection.ipynb
@@ -96,7 +96,193 @@
     "\n",
     "start_frame = imread(\"Data/vehicles/KITTI_extracted/5364.png\")\n",
     "\n",
-    "ppc_N = sourcer_params['pixels_per_cell']\n"
+    "ppc_N = sourcer_params['pixels_per_cell']\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sourcer = FeatureSourcer(sourcer_params, start_frame)\n",
+    "print(\"Loading images to memory...\")\n",
+    "t_start = time.time()\n",
+    "\n",
+    "vehicle_imgs, nonvehicle_imgs = [], []\n",
+    "vehicle_paths = glob.glob('Data/vehicles/*/*.png')\n",
+    "nonvehicle_paths = glob.glob('Data/non-vehicles/*/*.png')\n",
+    "\n",
+    "for path in vehicle_paths: vehicle_imgs.append(imread(path))\n",
+    "for path in nonvehicle_paths: nonvehicle_imgs.append(imread(path))\n",
+    "\n",
+    "vehicle_imgs, nonvehicle_imgs = np.asarray(vehicle_imgs), np.asarray(nonvehicle_imgs)\n",
+    "total_vehicles, total_nonvehicles = vehicle_imgs.shape[0], nonvehicle_imgs.shape[0]\n",
+    "\n",
+    "print(\"... Done\")\n",
+    "print(\"Time Taken:\", np.round(time.time() - t_start, 2))\n",
+    "print(\"Vehicle images shape: \", vehicle_imgs.shape)\n",
+    "print(\"Non-vehicle images shape: \", nonvehicle_imgs.shape)\n",
+    "\n",
+    "print(\"Extracting features... This might take a while...\")\n",
+    "t_start = time.time()\n",
+    "\n",
+    "vehicles_features, nonvehicles_features = [], []\n",
+    "\n",
+    "print(\"Vehicles...\")\n",
+    "for img in vehicle_imgs:\n",
+    "  vehicles_features.append(sourcer.features(img))\n",
+    "  print('█', end = '')\n",
+    "\n",
+    "print()\n",
+    "print(\"Non-Vehicles...\")\n",
+    "for img in nonvehicle_imgs:\n",
+    "  nonvehicles_features.append(sourcer.features(img))\n",
+    "  print('█', end = '')\n",
+    "                         \n",
+    "vehicles_features = np.asarray(vehicles_features)\n",
+    "nonvehicles_features = np.asarray(nonvehicles_features)\n",
+    "\n",
+    "print()\n",
+    "print(\"...Done\")\n",
+    "print(\"Time Taken:\", np.round(time.time() - t_start, 2))\n",
+    "print(\"Vehicles features shape: \", vehicles_features.shape)\n",
+    "print(\"Non-vehicles features shape: \", nonvehicles_features.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def boxBoundaries(box):\n",
+    "    xStart = box[0]\n",
+    "    yStart = box[1]\n",
+    "    xEnd = box[0] + box[2]\n",
+    "    yEnd = box[1] + box[2]\n",
+    "    return xStart , yStart, xEnd, yEnd \n",
+    "\n",
+    "def drawBoxes(frame, boxes, color = (255,0,0),thick= 10):\n",
+    "\n",
+    "    #take a copy from the original image to draw on it all the boxes we want to draw\n",
+    "    outImage = frame.copy()\n",
+    "\n",
+    "    #take every box we want to draw on the image,\n",
+    "    #and draw each one of them indvadully\n",
+    "    for box in boxes:\n",
+    "\n",
+    "        #get the start position, and the end postion for each traingle\n",
+    "        xStart , yStart, xEnd, yEnd = boxBoundaries(box)\n",
+    "\n",
+    "        #draw the rectangle on the image\n",
+    "        cv2.rectangle(outImage, (xStart , yStart),(xEnd, yEnd), color, thick)\n",
+    "\n",
+    "    return outImage\n",
+    "\n",
+    "#show images function\n",
+    "def showImages(images,nrows,ncols, width, height, depth = 80):\n",
+    "    fig, ax = plt.subplots(nrows= nrows, ncols=ncols, figsize= (width,height),dpi = depth)\n",
+    "    ax = ax.ravel()\n",
+    "\n",
+    "    for i in range(len(images)):\n",
+    "        img= images[i]\n",
+    "        ax[i].imshow(img)\n",
+    "\n",
+    "    for i in range(nrows*ncols):\n",
+    "        ax[i].axis('off')\n",
+    "def convert(frame, src_model = \"rgb\", dest_model = \"hls\"):\n",
+    "    \n",
+    "    if src_model == \"rgb\" and dest_model == \"hsv\": \n",
+    "      frame = cv2.cvtColor(frame, cv2.COLOR_RGB2HSV)\n",
+    "    elif src_model == \"rgb\" and dest_model == \"hls\":\n",
+    "      frame = cv2.cvtColor(frame, cv2.COLOR_RGB2HLS)\n",
+    "    elif src_model == \"rgb\" and dest_model == \"yuv\":\n",
+    "      frame = cv2.cvtColor(frame, cv2.COLOR_RGB2YUV)\n",
+    "    elif src_model == \"rgb\" and dest_model == \"ycrcb\":\n",
+    "      frame = cv2.cvtColor(frame, cv2.COLOR_RGB2YCR_CB)\n",
+    "    elif src_model == \"hsv\" and dest_model == \"rgb\":\n",
+    "      frame = cv2.cvtColor(frame, cv2.COLOR_HSV2RGB)\n",
+    "    elif src_model == \"hls\" and dest_model == \"rgb\":\n",
+    "      frame = cv2.cvtColor(frame, cv2.COLOR_HLS2RGB)\n",
+    "    elif src_model == \"yuv\" and dest_model == \"yuv\":\n",
+    "      frame = cv2.cvtColor(frame, cv2.COLOR_YUV2RGB)\n",
+    "    elif src_model == \"ycrcb\" and dest_model == \"ycrcb\":\n",
+    "      frame = cv2.cvtColor(frame, cv2.COLOR_YCR_CB2RGB)\n",
+    "    else: \n",
+    "      raise Exception('ERROR:', 'src_model or dest_model not implemented')\n",
+    "\n",
+    "    return frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def draw_debug_board(img0, bboxes, hot_windows, heatmap, labels):\n",
+    "\n",
+    "def draw_debug_board(img0, hot_windows, heatmap, threshold):\n",
+    "    \n",
+    "    img1 = np.copy(img0)\n",
+    "\n",
+    "    img = np.copy(img0)\n",
+    "\n",
+    "    thresh_map = HeatmapThresh(heatmap, threshold=threshold)\n",
+    "    img ,posMinMax , labels =HeatmapCord_Draw(img1,thresh_map)\n",
+    "    # plt.imshow(frameOut)\n",
+    "    bboxes = posMinMax\n",
+    "    # hot_windows = boungingBoxesTotal\n",
+    "    \n",
+    "    \n",
+    "    # prepare RGB heatmap image from float32 heatmap channel\n",
+    "    img_heatmap = (np.copy(heatmap) / np.max(heatmap) * 255.).astype(np.uint8);\n",
+    "    img_heatmap = cv2.applyColorMap(img_heatmap, colormap=cv2.COLORMAP_HOT)\n",
+    "    img_heatmap = cv2.cvtColor(img_heatmap, cv2.COLOR_BGR2RGB)\n",
+    "\n",
+    "    # prepare RGB labels image from float32 labels channel\n",
+    "    img_labels = (np.copy(labels) / np.max(labels) * 255.).astype(np.uint8);\n",
+    "    img_labels = cv2.applyColorMap(img_labels, colormap=cv2.COLORMAP_HOT)\n",
+    "    img_labels = cv2.cvtColor(img_labels, cv2.COLOR_BGR2RGB)\n",
+    "    \n",
+    "    # draw hot_windows in the frame\n",
+    "    img_hot_windows = np.copy(img)\n",
+    "    img_hot_windows = drawBoxes(img_hot_windows, hot_windows, thick=2)\n",
+    "    \n",
+    "    ymax = 0\n",
+    "    \n",
+    "    board_x = 5\n",
+    "    board_y = 5\n",
+    "    board_ratio = (img.shape[0] - 3*board_x)//3 / img.shape[0] #0.25\n",
+    "    board_h = int(img.shape[0] * board_ratio)\n",
+    "    board_w = int(img.shape[1] * board_ratio)\n",
+    "        \n",
+    "    ymin = board_y\n",
+    "    ymax = board_h + board_y\n",
+    "    xmin = board_x\n",
+    "    xmax = board_x + board_w\n",
+    "\n",
+    "    offset_x = board_x + board_w\n",
+    "\n",
+    "    # draw hot_windows in the frame\n",
+    "    img_hot_windows = cv2.resize(img_hot_windows, dsize=(board_w, board_h), interpolation=cv2.INTER_LINEAR)\n",
+    "    img[ymin:ymax, xmin:xmax, :] = img_hot_windows\n",
+    "    \n",
+    "    # draw heatmap in the frame\n",
+    "    xmin += offset_x\n",
+    "    xmax += offset_x\n",
+    "    img_heatmap = cv2.resize(img_heatmap, dsize=(board_w, board_h), interpolation=cv2.INTER_LINEAR)\n",
+    "    img[ymin:ymax, xmin:xmax, :] = img_heatmap\n",
+    "    \n",
+    "    # draw heatmap in the frame\n",
+    "    xmin += offset_x\n",
+    "    xmax += offset_x\n",
+    "    img_labels = cv2.resize(img_labels, dsize=(board_w, board_h), interpolation=cv2.INTER_LINEAR)\n",
+    "    img[ymin:ymax, xmin:xmax, :] = img_labels\n",
+    "    \n",
+    "    return img"
    ]
   }
  ],
