edit somw windows size

--- a/vehicle_detection.ipynb
+++ b/vehicle_detection.ipynb
@@ -587,8 +587,8 @@
     "frame4 = imread(\"Project_data/test_images/test4.jpg\")\n",
     "frame5 = imread(\"Project_data/test_images/test5.jpg\")\n",
     "frame6 = imread(\"Project_data/test_images/test6.jpg\")\n",
-    "windowSizes = 80, 120, 150, 180\n",
-    "stripPostions = 410, 390,  380, 380\n",
+    "windowSizes = 180, 100, 120, 140 #80,96,160,192\n",
+    "stripPostions = 360, 390, 390, 390 #\n",
     "\n",
     "boundingBoxSize = sourcer_params['bounding_box_size']\n",
     "# slider1 = Slider(sourcer = sourcer, ScalerModelPath=\"scaler.pkl\", svcModelPath=\"svc.pkl\", increment = 8)\n"
